--- a/TodoNg/src/app/components/todos/todo/todo.component.html
+++ b/TodoNg/src/app/components/todos/todo/todo.component.html
@@ -1,4 +1,5 @@
 <div>
     <input (change)="onToggle(todo)" type="checkbox" />
     {{todo.title}} {{todo.done}}
+    <button (click)="onDelete(todo)">Delete</button>
 </div>
