--- a/TodoNg/src/app/components/todos/todos.component.html
+++ b/TodoNg/src/app/components/todos/todos.component.html
@@ -1,3 +1,8 @@
 <p>{{todos.length}} in total</p>
-<app-add-todo (update)="addTodo($event)"></app-add-todo>
-<app-todo *ngFor="let todo of todos" [todo]="todo" (update)="onUpdate($event)"></app-todo>
+<app-add-todo (update)="add($event)"></app-add-todo>
+<app-todo 
+    *ngFor="let todo of todos" 
+    [todo]="todo" 
+    (update)="update($event)"
+    (delete)="delete($event)">
+</app-todo>
