rename component from addTodo to editTodo

--- a/TodoNg/src/app/components/todos/todo/todo.component.html
+++ b/TodoNg/src/app/components/todos/todo/todo.component.html
@@ -7,6 +7,6 @@
         <button (click)="onDelete(todo)">Delete</button>
     </span>
     <span *ngIf="editing">
-        <app-add-todo [todo]="todo" (update)="onUpdate($event)" (cancel)="editing=false"></app-add-todo>
+        <app-edit-todo [todo]="todo" (update)="onUpdate($event)" (cancel)="editing=false"></app-edit-todo>
     </span>
 </div>
