--- a/TodoNg/src/app/components/edit-todo/edit-todo.component.html
+++ b/TodoNg/src/app/components/edit-todo/edit-todo.component.html
@@ -1,3 +1,5 @@
 <input [(ngModel)]="title" type="text" name="title" placeholder="Type title of todo..." />
-<button (click)="add()" [disabled]="!title" [title]="title ? '' : 'Type title first'">Add</button>
+<button (click)="onConfirm()" [disabled]="!title" [title]="title ? '' : 'Type title first'">
+    {{okLabel}}
+</button>
 <button (click)="onCancel()" [hidden]="!todo">Cancel</button>
